updated: ProjectController (deleted "OK" ResponseStatus annotations) application.yaml (added storage path variable)
created:
PhotoService
PhotoDTO
PhotoMapper
PhotoController
StorageService interface
LocalStorageService class
